--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,6 @@ syn = {version="1.0",features=["full", "extra-traits"]}
 quote = "1.0"
 proc-macro2 = "1.0"
 num-bigint = "0.4.3"
+
+[dev_dependencies]
 pretty_assertions = "1.2.1"
