--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [main]
   pull_request:
+  release:
+    types: [published]
 
 env:
   RUSTFLAGS: -D warnings
@@ -48,3 +50,25 @@ jobs:
     - uses: actions/checkout@v3
     - run: rustup update
     - run: cargo doc
+
+  publish-verify:
+    if: "github.ref_protected"
+    needs: [complete]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - run: rustup update
+    - run: rustup target add wasm32-unknown-unknown
+    - run: make publish-verify
+
+  cargo-publish:
+    if: github.event_name == 'release'
+    needs: [complete]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - run: rustup update
+    - run: rustup target add wasm32-unknown-unknown
+    - run: make publish
+      env:
+        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
