Fix bump-version workflow

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,7 +1,7 @@
 name: Bump Version
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
     inputs:
       version:
         description: 'Version to bump to'
