--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust
 
 on:
   push:
-    branches: [main]
+    # branches: [main]
   pull_request:
   release:
     types: [published]
@@ -60,7 +60,6 @@ jobs:
 
   publish-verify:
     if: "github.ref_protected"
-    needs: [complete]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
