--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: rustup update
-    - run: cargo install --locked --version 0.21.1 cargo-workspace
+    - run: cargo install --locked --version 0.2.35 cargo-workspaces
     - run: |
         make bump-version VERSION=${{ inputs.version }}
     - name: Creat Commit
