--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -66,7 +66,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: rustup update
     - run: rustup target add wasm32-unknown-unknown
-    - run: cargo install --locked --version 0.21.1 cargo-workspace
+    - run: cargo install --locked --version 0.2.35 cargo-workspaces
     - run: make publish
       env:
         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
