--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
 
   complete:
     if: always()
-    needs: [fmt, lock, rust-analyzer-compat, build-and-test, docs]
+    needs: [fmt, rust-analyzer-compat, build-and-test, docs]
     runs-on: ubuntu-latest
     steps:
     - if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
@@ -26,13 +26,6 @@ jobs:
     - uses: actions/checkout@v3
     - run: rustup update
     - run: cargo fmt --all --check
-
-  lock:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - run: rustup update
-    - run: cargo fetch --locked
 
   rust-analyzer-compat:
     runs-on: ubuntu-latest
