--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -35,5 +35,5 @@ jobs:
             repo: context.repo.repo,
             head: 'bump-version-${{ inputs.version }}',
             base: 'main',
-            body: '### What\nBump version to ${{ inputs.version }}.\n\n### Why\nTriggered by ${{ github.actor }}'
+            body: '### What\nBump version to ${{ inputs.version }}.\n\n### Why\nTriggered by @${{ github.actor }}'
           });
