--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -17,7 +17,7 @@ jobs:
     - run: cargo install --locked --version 0.2.35 cargo-workspaces
     - run: |
         make bump-version VERSION=${{ inputs.version }}
-    - name: Creat Commit
+    - name: Create Commit
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
